fix coba 1
